unsubscribe method test and some fixes

--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -57,6 +57,8 @@ p {
     .form {
         background-color: #313439;
         padding: 2rem;
+        max-width: 42rem;
+        margin: 2rem;
 
         form {
             @include flex-wrap;
