unsubscribe thank you page and error page

--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -80,6 +80,14 @@ p {
             }
         }
     }
+
+    .message {
+        color: $white;
+
+        h2 {
+            @include title;
+        }
+    }
 }
 
 footer {
