--- a/scss/modules/global.scss
+++ b/scss/modules/global.scss
@@ -1,10 +1,13 @@
 $white: #F7F7F7;
 $gray: #BABAC1;
 $red: #D84E5B;
+$brown: #342c27;
+$brown-light: #dad3cf;
 
 
 body {
     background-color: #000000;
+    font-family: Helvetica, sans-serif;
     margin: 0;
 }
 
@@ -55,27 +58,110 @@ p {
     }
 
     .form {
-        background-color: #313439;
-        padding: 2rem;
-        max-width: 42rem;
+        background-color: $brown-light;
+        background-image: -webkit-linear-gradient(top, #e7e3e0, #c2b8b2);
+        color: #000;
+        max-width: 46rem;
         margin: 2rem;
+        padding: 2rem;
+
+        .subscribe-intro {
+            margin: 0;
+
+            h2 {
+                @include title;
+                border-bottom: thin solid $white;
+                color: $brown;
+                font-weight: bold;
+                line-height: 1.33;
+                margin: 0;
+            }
+
+            p {
+                color: #342c27;
+                font-size: 16px;
+                line-height: 1.39;
+            }
+        }
 
         form {
-            @include flex-wrap;
             border-radius: 5px;
+            margin-top: 2rem;
+
+            .group-row {
+                @include flex-wrap;
+                justify-content: space-between;
+
+                .group {
+                    width: 49%;
+                }
+
+                .group-radio {
+                    display: inline-block;
+                }
+
+                .age {
+                    @include flex-wrap;
+
+                    input {
+                        margin-top: 5px;
+                        margin-right: 10px;
+                        width: auto;
+                    }
+
+                    label {
+                        width: auto;
+                    }
+                }
+            }
+
+            label {
+                color: #000000;
+                font-size: 13px;
+                font-weight: bold;
+                line-height: 26px;
+                width: 100%;
+
+                .field-required {
+                    color: $red;
+                }
+            }
+
+            input, textarea {
+                border: 1px solid #a59992;
+                border-radius: 3px;
+                background-clip: padding-box;
+                background-color: #e3e3e3;
+                color: #8f8985;
+                font-size: 13px;
+                font-weight: 300;
+                margin-bottom: 10px;
+                line-height: 1.625;
+                padding: 10px 8px 9px;
+                width: 100%;
+            }
 
             .submit {
                 width: 100%;
                 text-align: center;
 
                 .btn {
-                    background-color: $red;
-                    border: none;
-                    color: $white;
+                    border: 1px solid #911616;
+                    color: #fff;
                     cursor: pointer;
                     font-size: 10px;
+                    font-weight: bold;
+                    margin: 0;
+                    padding: 10px 18px 8px;
+                    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
                     text-transform: uppercase;
-                    padding: .7rem 2rem;
+                    overflow: visible;
+                    border-radius: 3px;
+                    background-clip: padding-box;
+                    background-color: #710000;
+                    text-align: center;
+                    margin-top: 18px;
+                    width: 100%;
                 }
             }
         }
